[package]
name = "plasma_rifle"
version = "0.1.0"
authors = ["Bryant Eisenbach <fubuloubu@gmail.com>"]

[lib]
name = "plasma_rifle"
path = "src/lib.rs"

[[bin]]
name = "plasma-rifle-daemon"
path = "src/bin.rs"

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
